welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: 'case' expected but 'true' found.
true => 2*(a+b)
^sumDouble:4: error: '}' expected but ';' found.
false=> a+b}} 
^sumDouble:5: error: eof expected but '}' found.
 }
 ^